--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,188 @@ pictures/optimize_picture/colorExperience2.png
 pictures/optimize_picture/colorExperience2.jpg
 pictures/optimize_picture/colorExperience1.png
 pictures/optimize_picture/colorExperience1.jpg
+.DS_Store
+assets/.DS_Store
+joythaitone-wwdc23.zip
+pictures/.DS_Store
+test/.DS_Store
+test/wwdc23-joythaitone.zip
+test/wwdc23-joythaitone/.DS_Store
+test/wwdc23-joythaitone/assets/.DS_Store
+test/wwdc23-joythaitone/assets/assets_benjarong1.jpeg
+test/wwdc23-joythaitone/assets/assets_benjarong2.jpeg
+test/wwdc23-joythaitone/assets/assets_color-experience.jpeg
+test/wwdc23-joythaitone/assets/assets_colorExperience1.jpg
+test/wwdc23-joythaitone/assets/assets_colorExperience2.jpg
+test/wwdc23-joythaitone/assets/assets_colorExperience3.jpg
+test/wwdc23-joythaitone/assets/assets_colorExperience4.jpg
+test/wwdc23-joythaitone/assets/assets_phairoj-pittayamethi.jpg
+test/wwdc23-joythaitone/assets/assets_ramakien_murals.jpg
+test/wwdc23-joythaitone/assets/assets_ramayanawar/assets_ramayanawar.jpg
+test/wwdc23-joythaitone/assets/assets_ramayanawar/assets_ramayanawar_deutan.jpg
+test/wwdc23-joythaitone/assets/assets_ramayanawar/assets_ramayanawar_monochrom.jpg
+test/wwdc23-joythaitone/assets/assets_ramayanawar/assets_ramayanawar_protan.jpg
+test/wwdc23-joythaitone/assets/assets_ramayanawar/assets_ramayanawar_tritan.jpg
+test/wwdc23-joythaitone/assets/assets_ten_essential.jpeg
+test/wwdc23-joythaitone/assets/assets_thaitoneOriginal2.jpeg
+test/wwdc23-joythaitone/assets/assets_thaitoneOriginal3.jpeg
+test/wwdc23-joythaitone/assets/assets_thaitoneOringal/assets_thaitoneOriginal.jpg
+test/wwdc23-joythaitone/assets/assets_thaitoneOringal/thaitoneOriginal_deutan.jpg
+test/wwdc23-joythaitone/assets/assets_thaitoneOringal/thaitoneOriginal_monochrom.jpg
+test/wwdc23-joythaitone/assets/assets_thaitoneOringal/thaitoneOriginal_protan.jpg
+test/wwdc23-joythaitone/assets/assets_thaitoneOringal/thaitoneOriginal_tritan.jpg
+test/wwdc23-joythaitone/assets/assets_Yarong.jpg
+test/wwdc23-joythaitone/assets/own_colorsbook_cardnew.png
+test/wwdc23-joythaitone/assets/own_play_cardnew.png
+test/wwdc23-joythaitone/assets/own_temple1_ownshot.jpg
+test/wwdc23-joythaitone/assets/own_temple2_ownshot.jpg
+test/wwdc23-joythaitone/assets/own_thaitone_cardnew.png
+test/wwdc23-joythaitone/assets/own_thaitone_star.png
+test/wwdc23-joythaitone/assets/own_whatcard_creatornew.png
+test/wwdc23-joythaitone/assets/own_whatcard_inspirenew.png
+test/wwdc23-joythaitone/assets/own_whatcard_originnew.png
+test/wwdc23-joythaitone/assets/sounds/.DS_Store
+test/wwdc23-joythaitone/assets/sounds/mixkit-arcade-bonus-alert.mp3
+test/wwdc23-joythaitone/assets/sounds/mixkit-completion-of-a-level.mp3
+test/wwdc23-joythaitone/assets/sounds/mixkit-game-flute-bonus.mp3
+test/wwdc23-joythaitone/assets/sounds/mixkit-game-level-music.mp3
+test/wwdc23-joythaitone/assets/sounds/mixkit-player-losing-or-failing.mp3
+test/wwdc23-joythaitone/assets/sounds/mixkit-video-game-power-up.mp3
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/.swiftpm/xcode/package.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/.swiftpm/xcode/package.xcworkspace/xcuserdata/jjay.xcuserdatad/UserInterfaceState.xcuserstate
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/.swiftpm/xcode/xcuserdata/jjay.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/.swiftpm/xcode/xcuserdata/jjay.xcuserdatad/xcschemes/xcschememanagement.plist
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/AboutView.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/AppState.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/AppIcon.appiconset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/AppIcon.appiconset/thaitone-appicon.png
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/Art-1.imageset/Art-1.png
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/Art-1.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/Art-2.imageset/Art-2.png
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/Art-2.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/Art-3.imageset/Art-3.png
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/Art-3.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/Art-4.imageset/Art-4.png
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/Art-4.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/benjarong1.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/benjarong1.imageset/benjarong1.jpeg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/benjarong1.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/benjarong2.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/benjarong2.imageset/benjarong2.jpeg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/benjarong2.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/benjarong3.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/benjarong4.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ColorAuto.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/colorcreationexperience.imageset/color-experience.jpeg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/colorcreationexperience.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/colorExperience1.imageset/colorExperience1.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/colorExperience1.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/colorExperience2.imageset/colorExperience2.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/colorExperience2.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/colorExperience3.imageset/colorExperience3.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/colorExperience3.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/colorExperience4.imageset/colorExperience4.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/colorExperience4.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/colorsbook_card.imageset/colorsbook_card.png
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/colorsbook_card.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/creation.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/deutanBen1.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/deutanBen2.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/deutanBen3.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/deutanBen4.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/deutanBen5.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/lightgray.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/lightgray2.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/monochromBen1.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/monochromBen2.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/monochromBen3.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/monochromBen4.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/monochromBen5.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/origins1.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/origins2.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/phairoj.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/phairoj.imageset/phairoj-pittayamethi.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/play_card.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/play_card.imageset/play_card.png
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/protanBen1.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/protanBen2.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/protanBen3.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/protanBen4.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/protanBen5.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ramakien.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ramakien.imageset/ramakien_murals.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ramayanawar.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ramayanawar.imageset/ramayanawar.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ramayanawar_deutan.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ramayanawar_deutan.imageset/ramayanawar_deutan.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ramayanawar_monochrom.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ramayanawar_monochrom.imageset/ramayanawar_monochrom.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ramayanawar_protan.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ramayanawar_protan.imageset/ramayanawar_protan.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ramayanawar_tritan.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ramayanawar_tritan.imageset/ramayanawar_tritan.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/temple1.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/temple1.imageset/temple1_ownshot.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/temple2.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/temple2.imageset/temple2_ownshot.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ten_essential.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/ten_essential.imageset/ten_essential.jpeg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitone_card.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitone_card.imageset/thaitone_card.png
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitone_star.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitone_star.imageset/thaitone_star.png
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal.imageset/thaitoneOriginal.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal2.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal2.imageset/thaitoneOriginal2.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal3.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal3.imageset/thaitoneOriginal3.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal_deutan.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal_deutan.imageset/thaitoneOriginal_deutan.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal_monochrom.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal_monochrom.imageset/thaitoneOriginal_monochrom.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal_protan.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal_protan.imageset/thaitoneOriginal_protan.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal_tritan.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/thaitoneOriginal_tritan.imageset/thaitoneOriginal_tritan.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/tritanBen1.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/tritanBen2.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/tritanBen3.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/tritanBen4.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/tritanBen5.colorset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/whatcard_creator.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/whatcard_creator.imageset/whatcard_creator.png
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/whatcard_inspire.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/whatcard_inspire.imageset/whatcard_inspire.png
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/whatcard_origin.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/whatcard_origin.imageset/whatcard_origin.png
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/yarong.imageset/Contents.json
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Assets.xcassets/yarong.imageset/Yarong.jpg
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Base/ContentView.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Base/MyApp.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/CardView.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/ClearView.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/DisableCardView.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/EndView.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/GameState.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/GameView.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/GameViewModes.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/LearningStoryView.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Package.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Resources/mixkit-arcade-bonus-alert.mp3
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Resources/mixkit-bonus.wav
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Resources/mixkit-completion-of-a-level.mp3
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Resources/mixkit-game-flute-bonus.mp3
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Resources/mixkit-game-level-music.mp3
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Resources/mixkit-player-losing-or-failing.mp3
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Resources/mixkit-video-game-power-up.mp3
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/Sounds.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/ThaiToneCardView.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/TTColorBookView.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/WhatThaiToneScene.swift
+test/wwdc23-joythaitone/WWDC23-ThaiTone.swiftpm/WideCardView.swift
+wwdc23-joythaitone.zip
+WWDC23-ThaiTone.swiftpm/.swiftpm/xcode/package.xcworkspace/xcuserdata/jjay.xcuserdatad/UserInterfaceState.xcuserstate
+WWDC23-ThaiTone.swiftpm/Package.swift
